# Haskell-Programming

./: .gitignore  Haskell-Programming.cabal  LICENSE  NOTES.txt
attempt1/: NOTES.txt
attempt1/app/: Main.hs
attempt1/src/: Lib.hs
attempt1/src/ch2/: FunctionWithLet.hs  practice.hs  test.hs
experimental/: experimental.cabal
experimental/src/: FunctionWithWhere.hs  arith2.hs  factorialex.hs  greetIfCool1.hs  greetIfCool2.hs  greetIfCool3.hs  listex.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  readerex.hs  registeredUser1.hs  registeredUser2.hs  signalAdvesityEx.hs  test.hs  typeclassex.hs
proj/addition/: Addition.hs  LICENSE  addition.cabal
proj/hangman/: hangman.cabal
proj/hangman/src/: Main.hs
proj/morse/: LICENSE  package.yaml
proj/morse/src/: Main.hs  Morse.hs
proj/morse/tests/: CoArbitrary.hs  tests.hs
src/ch2/: FunctionWithWhere.hs  learn.hs
