name:                experimental
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/randallalexander/experimental#readme
license:             BSD3
license-file:        LICENSE
author:              Randall Alexander
maintainer:          randall.alexander@example.com
copyright:           Copyright: (c) 2016 Randall Alexander
category:            Learning Project
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable experimental-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , experimental
  default-language:    Haskell2010

test-suite experimental-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , experimental
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/randallalexander/experimental
