name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Randall Alexander
maintainer:          nospam@nospam.com
copyright:           Copyright: (c) 2016 Randall Alexander
category:            Learning Project
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010
